// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Name component renders name with correct file size 1`] = `
<div
  data-testid="corpus-name"
>
  <span>
    Test corpus 1
  </span>
   
  <span>
    (381.47 MiB)
  </span>
</div>
`;

exports[`Name component renders the latest job 1`] = `
<div
  data-testid="latest-job"
>
  <span>
    Latest Job:
  </span>
   
  <gl-link-stub
    class="gl-display-inline-block"
    href="https://www.gitlab.com/gitlab-examples/security/security-reports/-/jobs/1107103952"
    target="_blank"
  >
    
      gitlab-examples/security/security-reports/-/jobs/1107103952
    
  </gl-link-stub>
</div>
`;

exports[`Name component without job path renders a - string instead of a link 1`] = `
<div
  data-testid="latest-job"
>
  <span>
    Latest Job:
  </span>
   
  <span>
    -
  </span>
</div>
`;
